# Projekt

./: .gitignore  CMakeLists.txt  main.cpp
Engine/Graphics/: Renderer.cpp  Renderer.h  Vertex.h
Engine/Utils/Exception/: Exception.h  GlfwException.h  VulkanException.h
Engine/Utils/File/: Read.h  Write.h
Engine/Vulkan/: DebugReport.cpp  DebugReport.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  Surface.cpp  Surface.h
Engine/Vulkan/Core/: CommandPool.cpp  CommandPool.h  Instance.cpp  Instance.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  Queue.cpp  Queue.h  ShaderModule.cpp
Engine/Vulkan/Graphics/: Surface.cpp  Surface.h
Engine/Vulkan/Helpers/: QueueFamilyIndices.h  SwapchainSupportDetails.h
Engine/Window/: Window.cpp  Window.h
Game/: Game.cpp  Game.h
Game/Shaders/: compile.sh  shader.frag  shader.vert  vert.spv
dependencies/include/glfw/: glfw3.h  glfw3native.h
dependencies/include/glm/: glm.hpp
dependencies/include/glm/gtx/: integer.inl  intersect.inl  quaternion.inl  simd_vec4.inl
dependencies/include/vulkan/: libspirv.h  vk_icd.h  vk_layer.h  vk_layer_dispatch_table.h  vk_platform.h  vk_sdk_platform.h  vulkan.hpp  vulkan_android.h  vulkan_core.h  vulkan_ios.h  vulkan_macos.h  vulkan_mir.h  vulkan_vi.h  vulkan_wayland.h  vulkan_win32.h  vulkan_xcb.h  vulkan_xlib.h  vulkan_xlib_xrandr.h
engine/: CMakeLists.txt
engine/graphics/: renderer.cpp  renderer.h  vertex.h
engine/utils/exception/: exception.h  glfw_exception.h  vulkan_exception.h
engine/utils/file_io/: read.h  write.h
engine/vulkan/core/: command_buffers.cpp  command_buffers.h  command_pool.cpp  command_pool.h  compute_pipeline.cpp  compute_pipeline.h  debug_report.cpp  debug_report.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set_layout.cpp  descriptor_set_layout.h  descriptor_sets.cpp  descriptor_sets.h  fences.cpp  fences.h  index_buffer.cpp  index_buffer.h  instance.cpp  instance.h  logical_device.cpp  logical_device.h  physical_device.cpp  physical_device.h  queue.cpp  queue.h  render_pass.cpp  render_pass.h  semaphores.cpp  semaphores.h  shader_module.cpp  shader_module.h  vertex_buffer.cpp  vertex_buffer.h
engine/vulkan/graphics/: frame_buffers.cpp  frame_buffers.h  graphics_pipeline.cpp  graphics_pipeline.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  texture_image.cpp  texture_image.h  uniform_buffer_object.h  uniform_buffers.cpp  uniform_buffers.h  vertex.h
engine/vulkan/helpers/: queue_family_indices.h  swapchain_support_details.h
engine/window/: glfw_callbacks.h  window.cpp  window.h
engine/window/event/: event.h  event_handler.h
engine/window/io/: keyboard.h  mouse.h
game/: CMakeLists.txt  game.cpp  game.h  main.cpp
game/shaders/: frag.spv  shader.vert
glm/: CMakeLists.txt
glm/include/glm/: glm.hpp
glm/include/glm/gtx/: intersect.inl  quaternion.inl  simd_vec4.inl
stb/: CMakeLists.txt
vulkan/: CMakeLists.txt
